--- a/package.json
+++ b/package.json
@@ -24,6 +24,10 @@
     "dotenv": "^8.2.0"
   },
   "engines": {
-    "node": "10.20"
+    "node": "10.20.1",
+    "npm": "6.14.4"
+  },
+  "scripts": {
+     "start": "node app.js"
   }
 }
