--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "environment",
   "version": "1.0.0",
   "description": "___        ______     ____ _                 _  ___           / \\ \\      / / ___|   / ___| | ___  _   _  __| |/ _ \\         / _ \\ \\ /\\ / /\\___ \\  | |   | |/ _ \\| | | |/ _` | (_) |       / ___ \\ V  V /  ___) | | |___| | (_) | |_| | (_| |\\__, |      /_/   \\_\\_/\\_/  |____/   \\____|_|\\___/ \\__,_|\\__,_|  /_/   -----------------------------------------------------------------",
-  "main": "src/app.js",
+  "main": "../src/app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node ../src/app.js"
   },
   "author": "",
   "license": "ISC",
@@ -26,8 +27,5 @@
   "engines": {
     "node": "10.20.1",
     "npm": "6.14.4"
-  },
-  "scripts": {
-     "start": "node app.js"
   }
 }
